--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ pandas = "==1.2.3"
 requests = "==2.25.1"
 beautifulsoup4 = "==4.9.3"
 xlsxwriter = "==1.3.7"
+click = "==7.1.2"
 
 [dev-packages]
 black = "==20.8b1"
